$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------
- fixup go.sh to find svn (yet again !)

- amd64 builds;
  now use wol from ports (amd64 fails to compile in previous method)
  ipf path removed ref to i386, kernel build removed i386 from path 
  patch kernel to make amd64 if uname -m is amd64
  append amd64 to image names

- change dhcp-pd to be /64 by default

- fixup go.sh to find svn (again) and stage 2 to use tmp for php and minihttpd
  and stage 5 mfsroot for iso filename change

- move system version number to file <repo>/version

- fix DHCPv6 server wouldn't start

- circumvent shaper and captive portal for IPv6 for the time being, since it
  doesn't work properly (dummynet IPv6 support is broken, and captive portal
  has no explicit support for it). This gives CP users the option to either
  simply not configure v6 on the CP interface, or to configure it and have
  IPv6 traffic pass regardless of whether the client is authenticated.

- fix copy&paste bugs surrounding ipv6ramtu and make it optional

- remove ipfw.ko dependency on libalias.ko

- take port options out of .tgz for easier maintenance

- remove stray "nat_iterator" printf from ipnat

- remove ip_input/dummynet/mbuf patches; dummynet + bridging appears
  to work fine now with 8.2

- add ucd-snmp sysDescr patch back in

- remove filtering bridge reminder on System: Advanced page - can't
  keep this forever

- fixup go.sh to find svn and  stage 3 to not exit on strip harmless errors

- major overhaul of wireless LAN support: in FreeBSD 8, it is always
  necessary to create subinterfaces (wlanX) attached to the actual
  physical interfaces (e.g. athX). On some cards, it is now also
  possible to create multiple APs at the same time. To reflect this
  change, the wireless settings have moved to the Interfaces: assign
  page, where WLAN subinterfaces can be created much like for VLANs.
